--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>AWD Configuration Console</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
